# hh_it

./: Dockerfile  docker-compose.yml  entrypoint.sh  pyproject.toml
hh_it/: manage.py
hh_it/app/: admin.py  serializers.py  urls.py
hh_it/app/migrations/: 0001_initial.py  0002_technology_company_company_description_and_more.py  0003_position_alter_company_options_and_more.py  0004_country_street_city_location.py  0005_alter_vacancy_options.py  0006_alter_company_location.py  0007_employmenttype_vacancy_currency_and_more.py  0008_alter_vacancy_location.py  0009_remove_vacancy_technology_vacancy_technology.py  0010_hiddencompanies_hiddenvacancies.py  0011_likedvacancies.py
hh_it/app/models/: __init__.py  dict.py  models.py
hh_it/app/views/: __init__.py  dict.py  views.py
hh_it/hh_it/: asgi.py  settings.py  urls.py  wsgi.py
