[tool.poetry]
name = "hh-it"
version = "0.1.0"
description = ""
authors = ["Samat Sadvakassov <sadvakasov.samat@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"
djangorestframework = "^3.15.2"
markdown = "^3.7"
django-filter = "^24.3"
djangorestframework-simplejwt = "^5.3.1"
drf-spectacular = "^0.27.2"
python-environ = "^0.4.54"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
